--- a/client/src/components/CreateDriver/CreateDriver.css
+++ b/client/src/components/CreateDriver/CreateDriver.css
@@ -31,3 +31,7 @@ button[type=text], select, textarea {
     background-color: #f2f2f2;
     padding: 20px;
   }
+
+  span {
+    color: #e10600;
+  }
