--- a/client/public/styles/all.css
+++ b/client/public/styles/all.css
@@ -5,7 +5,7 @@ body {
 }
 
 .basic {
-    background: linear-gradient(rgba(250, 248, 248, 0.2), rgba(25, 167, 173, 0.2)), url(../img/We-need-to-talk-about-pets.jpg) no-repeat center;
+    background: linear-gradient(rgba(250, 248, 248, 0.2), rgba(25, 167, 173, 0.2));
     background-size: cover;
     height: 85vh;
     position: relative;
@@ -52,7 +52,7 @@ body {
     border-radius: 0.4rem;
     text-decoration: none;
     font-weight: bold;
-    background: gray;
+    background: #5d5757;
     color: rgb(255, 255, 255);
     border: none;
     font-size: 1rem;
@@ -100,21 +100,21 @@ img {
     padding-top: 100%;
 }
 
-.detailsOtherPet,
-.detailsMyPet,
-.deletePet,
-.otherPet,
-.myPet {
+.detailsOtherDriver,
+.detailsMyDriver,
+.deleteDriver,
+.otherDriver,
+.myDriver {
     display: inline;
     flex-direction: column;
     align-items: center;
 }
 
 
-.detailsMyPet>p:nth-child(2),
-.deletePet>p:nth-child(2),
-.otherPet>p:nth-child(2),
-.myPet>p:nth-child(2) {
+.detailsMyDriver>p:nth-child(2),
+.deleteDriver>p:nth-child(2),
+.otherDriver>p:nth-child(2),
+.myDriver>p:nth-child(2) {
     font-size: 1.2rem;
     font-weight: bold;
 }
@@ -133,7 +133,7 @@ img {
 }
 
 .basic h1,
-.my-pets h1,
+.my-drivers h1,
 .dashboard h1 {
     text-align: center;
     margin: 0rem;
@@ -159,22 +159,22 @@ div.actions a {
     margin-right: 10px;
 }
 
-.deletePet>form
-.detailsMyPet>form {
+.deleteDriver>form
+.detailsMyDriver>form {
     display: flex;
     flex-direction: column;
     padding-bottom: 1rem;
 }
 
-.my-pets .my-pets-list,
-.dashboard .other-pets-list {
+.my-drivers .my-drivers-list,
+.dashboard .other.drivers-list {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
-.detailsMyPet textarea,
-.my-pets textarea {
+.detailsMyDriver textarea,
+.my-drivers textarea {
     margin-bottom: 2rem;
 }
 
@@ -191,7 +191,7 @@ footer p {
     color: white;
 }
 
-.no-pets {
+.no-drivers {
     font-weight: bold;
     font-size: large;
     text-align: center;
@@ -201,7 +201,8 @@ textarea#description {
     height: 100px;
     resize: none;
 }
-.otherPet {
+.otherDriver {
+    display: inline-table;
     align-items: inherit;
     width: 28%;
     margin-bottom: 15px;
