--- a/client/src/components/CreateDriver/CreateDriver.css
+++ b/client/src/components/CreateDriver/CreateDriver.css
@@ -22,7 +22,7 @@ button[type=text], select, textarea {
   
   /* When moving the mouse over the submit button, add a darker green color */
   button[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #5d5757;
   }
   
   /* Add a background color and some padding around the form */
