css modules added

--- a/client/src/components/Schedule/Schedule.module.css
+++ b/client/src/components/Schedule/Schedule.module.css
@@ -55,4 +55,32 @@
 
   .back-button {
     width: 10%;
+    display: inline-block;
+    padding: 0.6rem 1rem;
+    border-radius: 0.4rem;
+    text-decoration: none;
+    background: #e10600;
+    color: rgb(255, 255, 255);
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
   }
+
+  .button {
+    display: inline-block;
+    padding: 0.6rem 1rem;
+    border-radius: 0.4rem;
+    text-decoration: none;
+    background: #e10600;
+    color: rgb(255, 255, 255);
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+  }
+
+  li {
+    list-style-type: none;
+  }
+
