--- a/client/src/components/Home/LoginAndRegister.module.css
+++ b/client/src/components/Home/LoginAndRegister.module.css
@@ -3,6 +3,8 @@ text-align: center;
 }
 form {border: 3px solid #f1f1f1;
 display: inline-block;
+width: 500px;
+margin-top: 100px;
 }
 
 input[type=text], input[type=password] {
@@ -46,3 +48,5 @@ span.psw {
   float: right;
   padding-top: 16px;
 }
+
+
