owner guard added

--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -3,7 +3,11 @@ footer {
     padding: 3px;
     background-color: black;
     color: white;
-    margin-top: auto;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
   }
 
   .resize {
