--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,3 +1,8 @@
 #site-content>section.basic {
     text-align: center;
-} 
+}
+
+body {font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-bottom: 4rem;
+    }
