--- a/client/src/components/UserDrivers/UserDriverCard.module.css
+++ b/client/src/components/UserDrivers/UserDriverCard.module.css
@@ -41,3 +41,16 @@
     cursor: pointer;
     text-align: center;
 }
+
+.disabled {
+    display: inline-block;
+    padding: 0.6rem 1rem;
+    border-radius: 0.4rem;
+    text-decoration: none;
+    background: grey;
+    color: rgb(255, 255, 255);
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+}
