--- a/client/src/components/Home/LoginAndRegister.module.css
+++ b/client/src/components/Home/LoginAndRegister.module.css
@@ -1,4 +1,4 @@
-form {border: 3px solid #f1f1f1;
+.loginAndRegisterForm {border: 3px solid #f1f1f1;
 display: inline-block;
 width: 500px;
 margin-top: 100px;
