minor bug with like service fixed

--- a/client/src/components/CreateDriver/CreateDriver.module.css
+++ b/client/src/components/CreateDriver/CreateDriver.module.css
@@ -31,3 +31,8 @@ button[type=text], select, textarea {
   .errors {
     color: #e10600;
   }
+
+  .createForm {
+    width: 30vw;
+    margin-left: 35vw;
+  }
