--- a/client/src/components/UserDrivers/EditUserDriverCard.module.css
+++ b/client/src/components/UserDrivers/EditUserDriverCard.module.css
@@ -27,3 +27,8 @@ button[type=text], select, textarea {
     background-color: #f2f2f2;
     padding: 20px;
   }
+
+  .editForm {
+    width: 30vw;
+    margin-left: 35vw;
+  }
